[package]
name = "powerdns"
authors = ["Galen Guyer <galen@galenguyer.com>"]
description = "A PowerDNS API client"
repository = "https://github.com/galenguyer/powerdns"
license = "MIT"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "2"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["macros"] }
rand = "0.9.2"